<resources>
    <string name="app_name">EasyNutritionTracker</string>
    <string name="text_init_showcalories">0</string>
    <string name="text_init_showcarbs">0</string>
    <string name="text_init_showfluids">0</string>
    <string name="text_init_showproteins">0</string>
    <string name="saved_calories">savedCalories</string>
    <string name="saved_carbs">savedCarbs</string>
    <string name="saved_fluids">savedFluids</string>
    <string name="saved_proteins">savedProteins</string>
    <string name="button_add_all">ADD</string>
    <string name="button_reset_daily_values">HOLD TO RESET</string>
    <string name="hint_enter_calories">Calories</string>
    <string name="hint_enter_carbs">Carbs</string>
    <string name="hint_enter_fluids">Fluids</string>
    <string name="hint_enter_proteins">Proteins</string>
    <string name="label_calories">Calories:</string>
    <string name="label_calories_kcal">kcal</string>
    <string name="label_carbs">Carbs:</string>
    <string name="label_carbs_g">g</string>
    <string name="label_fluids">Fluids:</string>
    <string name="label_fluids_ml">ml</string>
    <string name="label_proteins">Proteins:</string>
    <string name="label_proteins_g">g</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>