<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.EasyNutritionTracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_showCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_init_showcalories"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView_showCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_init_showcarbs"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="69dp" />

    <TextView
        android:id="@+id/textView_showFluids"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_init_showfluids"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/editText_enterCalories"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_calories"
        android:inputType="number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="291dp" />

    <EditText
        android:id="@+id/editText_enterCarbs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_carbs"
        android:inputType="number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="352dp" />

    <Button
        android:id="@+id/button_addDailyValues"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/button_add_all"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button_resetDailyValues"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="#D81B60"
        android:text="@string/button_reset_daily_values"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="382dp" />

    <EditText
        android:id="@+id/editText_enterFluids"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_fluids"
        android:inputType="number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="413dp" />

</androidx.constraintlayout.widget.ConstraintLayout>